--- a/Test Harness/SessionReplayTest/SessionReplayTest/Base.lproj/Main.storyboard
+++ b/Test Harness/SessionReplayTest/SessionReplayTest/Base.lproj/Main.storyboard
@@ -130,29 +130,29 @@
             <objects>
                 <tableViewController id="qhG-hM-xw1" customClass="DogListViewController" customModule="SessionReplayTest" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="never" dataMode="prototypes" style="plain" separatorStyle="none" separatorInsetReference="fromAutomaticInsets" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" contentViewInsetsToSafeArea="NO" id="eP3-oa-hsi">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="528"/>
+                        <rect key="frame" x="0.0" y="0.0" width="385" height="528"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DogInfoCell" rowHeight="200" id="1Ug-aq-LKj" customClass="DogInfoCellTableViewCell" customModule="SessionReplayTest" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="200"/>
+                                <rect key="frame" x="0.0" y="50" width="385" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Ug-aq-LKj" id="a1y-Tq-dwc">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="385" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qot-zF-w54">
-                                            <rect key="frame" x="20" y="20" width="353" height="169"/>
+                                            <rect key="frame" x="20" y="20" width="345" height="169"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dog Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MCb-tD-gaZ">
-                                                    <rect key="frame" x="8" y="20" width="105.33333333333334" height="26"/>
+                                                    <rect key="frame" x="8" y="20" width="105.33333333333333" height="26"/>
                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="22"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" verticalCompressionResistancePriority="250" text="Short Description of Dog. This can go multiple lines if needed" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qlz-OX-XW6">
-                                                    <rect key="frame" x="8" y="54" width="201" height="58.666666666666657"/>
+                                                    <rect key="frame" x="8" y="54" width="193" height="58.666666666666657"/>
                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -164,7 +164,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="748" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ogw-KJ-lvP">
-                                                    <rect key="frame" x="124" y="121" width="85" height="28"/>
+                                                    <rect key="frame" x="116" y="121" width="85" height="28"/>
                                                     <color key="backgroundColor" systemColor="systemYellowColor"/>
                                                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -175,9 +175,12 @@
                                                         <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                                         <color key="baseForegroundColor" name="AccentColor"/>
                                                     </buttonConfiguration>
+                                                    <connections>
+                                                        <segue destination="10b-ph-XuX" kind="show" id="OnJ-4t-chv"/>
+                                                    </connections>
                                                 </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pFu-LI-6R0">
-                                                    <rect key="frame" x="217" y="20" width="128" height="129"/>
+                                                    <rect key="frame" x="209" y="20" width="128" height="129"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="pFu-LI-6R0" secondAttribute="height" multiplier="1:1" id="ZT2-m6-N3A"/>
                                                         <constraint firstAttribute="width" constant="128" id="oVg-57-SAj"/>
@@ -228,39 +231,39 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PHX-AM-ETe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-680.15267175572512" y="666.90140845070425"/>
+            <point key="canvasLocation" x="544" y="557"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="dee-md-M22">
             <objects>
                 <viewController id="10b-ph-XuX" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="i5v-zz-Oei">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="385" height="518"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="n9o-0Y-o98">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="0.0" width="385" height="518"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Eeyore Style Dog" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0o-Ez-wox">
-                                        <rect key="frame" x="8" y="8" width="377" height="39.333333333333336"/>
+                                        <rect key="frame" x="8" y="8" width="369" height="39.333333333333336"/>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="34"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="oxq-Xo-24S">
-                                        <rect key="frame" x="8" y="118.66666666666666" width="377" height="90.333333333333343"/>
+                                        <rect key="frame" x="8" y="70.666666666666686" width="369" height="88.333333333333314"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eeyore dog" translatesAutoresizingMaskIntoConstraints="NO" id="8S3-3q-3pQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="120.33333333333333" height="90.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="117.66666666666667" height="88.333333333333329"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="8S3-3q-3pQ" secondAttribute="height" multiplier="4:3" id="ag9-DO-B9D"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eeyore dog" translatesAutoresizingMaskIntoConstraints="NO" id="hm0-Vr-TEJ">
-                                                <rect key="frame" x="128.33333333333334" y="0.0" width="120.33333333333334" height="90.333333333333329"/>
+                                                <rect key="frame" x="125.66666666666666" y="0.0" width="117.66666666666666" height="88.333333333333329"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eeyore dog" translatesAutoresizingMaskIntoConstraints="NO" id="UhH-zO-GSh">
-                                                <rect key="frame" x="256.66666666666669" y="0.0" width="120.33333333333331" height="90.333333333333329"/>
+                                                <rect key="frame" x="251.33333333333329" y="0.0" width="117.66666666666666" height="88.333333333333329"/>
                                             </imageView>
                                         </subviews>
                                         <constraints>
@@ -269,23 +272,23 @@
                                         </constraints>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBf-VZ-Ap1">
-                                        <rect key="frame" x="8" y="280" width="377" height="78.333333333333314"/>
+                                        <rect key="frame" x="8" y="182.66666666666666" width="369" height="78.333333333333343"/>
                                         <string key="text">The Eeyore Style Dog will surprise you! Turns out, she is not only pretty, but she is smart and playful too. This Princess will keep you on your toes. </string>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Features" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QC2-Kb-eEd">
-                                        <rect key="frame" x="8" y="429.66666666666669" width="377" height="27.666666666666686"/>
+                                        <rect key="frame" x="8" y="284.33333333333331" width="369" height="27.666666666666686"/>
                                         <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="R0o-Om-it6">
-                                        <rect key="frame" x="8" y="528.66666666666663" width="377" height="117.33333333333337"/>
+                                        <rect key="frame" x="8" y="335.66666666666669" width="369" height="117.33333333333331"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="00P-eM-Vd6">
-                                                <rect key="frame" x="0.0" y="0.0" width="188.66666666666666" height="117.33333333333333"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="184.66666666666666" height="117.33333333333333"/>
                                                 <string key="text">Short hair, no mess!
 Eats over a pound of raw meat a day!
 Can tell time - she knows when it's her dinner time!</string>
@@ -294,7 +297,7 @@ Can tell time - she knows when it's her dinner time!</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9WY-VP-b3i">
-                                                <rect key="frame" x="188.66666666666663" y="0.0" width="188.33333333333337" height="117.33333333333333"/>
+                                                <rect key="frame" x="184.66666666666663" y="0.0" width="184.33333333333337" height="117.33333333333333"/>
                                                 <string key="text">Gets along with other dogs!
 Loves to run zoomies!
 Will roll in whatever happens to be on the ground!</string>
@@ -305,7 +308,7 @@ Will roll in whatever happens to be on the ground!</string>
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9nZ-C0-gxB">
-                                        <rect key="frame" x="8" y="717.33333333333337" width="377" height="33.666666666666629"/>
+                                        <rect key="frame" x="8" y="476.33333333333331" width="369" height="33.666666666666686"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="tinted" title="BUY NOW!">
                                             <fontDescription key="titleFontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="17"/>
