--- a/Test Harness/SessionReplayTest/SessionReplayTest/Base.lproj/Main.storyboard
+++ b/Test Harness/SessionReplayTest/SessionReplayTest/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="cart.fill" catalog="system"/>
                                                 <connections>
-                                                    <segue destination="BOO-Di-FVT" kind="presentation" id="cly-uH-84Z"/>
+                                                    <segue destination="BOO-Di-FVT" kind="show" id="CSk-i7-zMF"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -319,9 +319,7 @@ Will roll in whatever happens to be on the ground!</string>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="buyNow:" destination="10b-ph-XuX" eventType="touchUpInside" id="ONc-EH-Dk2"/>
-                                            <segue destination="BOO-Di-FVT" kind="popoverPresentation" popoverAnchorView="9nZ-C0-gxB" id="EPW-hN-Irp">
-                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                            </segue>
+                                            <segue destination="BOO-Di-FVT" kind="show" id="ayy-IF-3Su"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -359,11 +357,11 @@ Will roll in whatever happens to be on the ground!</string>
             <objects>
                 <viewController id="BOO-Di-FVT" customClass="CheckoutViewController" customModule="SessionReplayTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Lcz-my-oKt">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Xhx-nx-aDF">
-                                <rect key="frame" x="8" y="0.0" width="377" height="792"/>
+                                <rect key="frame" x="8" y="103" width="377" height="665"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pups 'R' Us Cart" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Jy-6v-I66">
                                         <rect key="frame" x="0.0" y="0.0" width="377" height="33.666666666666664"/>
@@ -372,7 +370,7 @@ Will roll in whatever happens to be on the ground!</string>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5cU-3n-cmS">
-                                        <rect key="frame" x="0.0" y="41.666666666666657" width="377" height="508.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="41.666666666666671" width="377" height="184.66666666666663"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="checkoutItem" rowHeight="91" id="AdK-Px-zgP" customClass="CheckoutTableViewCell" customModule="SessionReplayTest" customModuleProvider="target">
@@ -443,23 +441,23 @@ Will roll in whatever happens to be on the ground!</string>
                                         </connections>
                                     </tableView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0r7-CU-F8a">
-                                        <rect key="frame" x="0.0" y="558.33333333333337" width="377" height="26.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="234.33333333333331" width="377" height="26.333333333333314"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PrX-pi-MGS">
-                                        <rect key="frame" x="0.0" y="592.66666666666663" width="377" height="34"/>
+                                        <rect key="frame" x="0.0" y="268.66666666666669" width="377" height="231"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" textContentType="name"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bW0-j9-VS9">
-                                        <rect key="frame" x="0.0" y="634.66666666666663" width="377" height="34"/>
+                                        <rect key="frame" x="0.0" y="507.66666666666663" width="377" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" textContentType="address-line1"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Xsx-IP-U9W">
-                                        <rect key="frame" x="0.0" y="676.66666666666663" width="377" height="34"/>
+                                        <rect key="frame" x="0.0" y="549.66666666666663" width="377" height="34"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="247" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="City, State" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UK2-O0-xuS">
                                                 <rect key="frame" x="0.0" y="0.0" width="248" height="34"/>
@@ -474,10 +472,10 @@ Will roll in whatever happens to be on the ground!</string>
                                         </subviews>
                                     </stackView>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" title="Check if billing address and shipping address are the same" translatesAutoresizingMaskIntoConstraints="NO" id="HbD-i0-CVg">
-                                        <rect key="frame" x="0.0" y="718.66666666666663" width="379" height="31"/>
+                                        <rect key="frame" x="0.0" y="591.66666666666663" width="379" height="31"/>
                                     </switch>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Jf-QH-aqU">
-                                        <rect key="frame" x="0.0" y="757.66666666666663" width="377" height="34.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="630.66666666666663" width="377" height="34.333333333333371"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Continue to Billing"/>
                                         <connections>
@@ -496,6 +494,7 @@ Will roll in whatever happens to be on the ground!</string>
                             <constraint firstItem="dgV-Jk-4cX" firstAttribute="trailing" secondItem="Xhx-nx-aDF" secondAttribute="trailing" constant="8" id="vCT-08-l9D"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="EaH-Tw-bJd"/>
                     <connections>
                         <outlet property="addressInput" destination="bW0-j9-VS9" id="mRs-be-nH0"/>
                         <outlet property="addressesTheSameSwitch" destination="HbD-i0-CVg" id="FKj-9y-MkS"/>
@@ -511,7 +510,7 @@ Will roll in whatever happens to be on the ground!</string>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="cly-uH-84Z"/>
+        <segue reference="CSk-i7-zMF"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
@@ -521,7 +520,7 @@ Will roll in whatever happens to be on the ground!</string>
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
